[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/RoundFinishDisplay/RoundFinishDisplay.gd" type="Script" id=1]

[node name="HBoxContainer" type="HBoxContainer"]
margin_top = 50.0
margin_right = 1024.0
margin_bottom = 110.0
alignment = 1
script = ExtResource( 1 )

[node name="PlayerWonLabel" type="Label" parent="."]
margin_left = 428.0
margin_top = 23.0
margin_right = 509.0
margin_bottom = 37.0
text = "Player 1 won"
align = 1
valign = 1

[node name="StartRoundButton" type="Button" parent="."]
margin_left = 513.0
margin_right = 596.0
margin_bottom = 60.0
text = "Next round"

[connection signal="pressed" from="StartRoundButton" to="." method="_on_StartRoundButton_pressed"]
